<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spacing_large"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_sign"
        style="@style/LayoutMine"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_sign"
            style="@style/ImageMine"
            android:background="@drawable/ic_user_sign"/>

        <TextView
            style="@style/TextMine"
            android:text="@string/text_user_sign"/>
    </LinearLayout>

    <View
        android:id="@+id/view_div_sign"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_sign"
        android:layout_marginStart="32dp"
        android:background="@color/view_divide"/>

    <LinearLayout
        android:id="@+id/ll_psw"
        style="@style/LayoutMine"
        android:layout_below="@id/view_div_sign"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_psw"
            style="@style/ImageMine"
            android:background="@drawable/ic_update_psw"/>

        <TextView
            style="@style/TextMine"
            android:text="@string/text_user_psw"/>
    </LinearLayout>

    <View
        android:id="@+id/view_spacing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_large"
        android:layout_below="@id/ll_psw"
        android:background="@color/bg_background"/>

    <TextView
        android:id="@+id/txt_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_item_height"
        android:layout_below="@id/view_spacing"
        android:gravity="center"
        android:text="@string/text_logout"
        android:textColor="@color/text_red"
        android:textSize="@dimen/text_primary"/>
</RelativeLayout>